moved bug report instructions to the man page

--- a/faq.html
+++ b/faq.html
@@ -31,8 +31,7 @@
 <h2 id="index">Index</h2>
 
 <ol>
-  <li><a href="#meta">meta information</a></li>
-  <li><a href="#bugs">bug reports</a></li>
+ <li><a href="#meta">meta information</a></li>
 </ol>
 
 <h2 id="meta">Meta information</h2>
@@ -43,6 +42,15 @@
 
 <h3 id="menorah">Why is CLISP using menorah as the logo?</h3>
 
+<p>If you must have some answer and you do not care whether it is
+correct or not, you may think that
+<a href="http://www.lisp.org">Common Lisp</a> brings
+the <strong>Light</strong> to a programmer, and
+<a href="http://clisp.cons.org">CLISP</a>  is a vehicle that carries
+the <strong>Light</strong>.</p>
+
+<h4>History</h4>
+
 <p>CLISP has been using the menorah for the logo since the project was
 first started in the early 1990-ies by Bruno Haible and Michael Stoll.
 This <em>probably</em> reflects the authors' affection toward the
@@ -51,45 +59,27 @@ Jewish people, Judaism or the State of Israel
 You may ask the original authors for details yourself.
 Both of them are very busy though, so do not expect a prompt reply.</p>
 
-<p>If you must have some answer and you do not care whether it is
-correct or not, you may think that Common Lisp brings the Light to a
-programmer, and CLISP is a vehicle that carries the Light.</p>
+<h4>Shouldn't the logo be changed now due to the current political
+  developments in the Middle East?</h4>
 
-<p><a href="#index">index</a></p>
+<p>The CLISP developers, both the original creators and the current
+maintainers, do not subscribe to the mainstream view that blames the
+Jews for everything from high oil prices and Islamic radicalism to El
+Ni&ntilde;o and Sun spots.</p>
 
-<h2 id="bugs">Bug reports</h2>
-
-<p>When you encounter a bug in CLISP, please report it to the
-  <a href="http://lists.sourceforge.net/lists/listinfo/clisp-list">CLISP
-  mailing list</a> or the
-  <a href="http://sourceforge.net/tracker/?func=add&amp;group_id=1355&amp;atid=101355">SourceForge bug tracker</a>.</p>
-
-<p>When submitting a bug report, please specify the
-following information:</p>
-
-<ol>
- <li>What is your platform?
-   (<code>"uname -a"</code> on a Unix system)
-   compiler version?  libc (on Linux)?</li>
- <li>Where did you get the sources?  when?
-   (absolute dates are preferred over the relative ones)</li>
- <li>How did you build CLISP? (what command, options etc)
-   please do a clean build (remove your build directory and
-   build CLISP with <code>"./configure --build build"</code> or at
-   least do a <code>"make distclean"</code> before <code>"make"</code>).
-   If you are reporting a segmentation fault, please do
-   <code>"./configure --with-debug --build build-g"</code>
-   and report the backtrace.</li>
- <li>If you are using pre-built binaries, the problem is likely
-   to be in the incompatibilities between the platform on which
-   the binary was built and yours;
-   please try compiling the sources.</li>
- <li>What is the output of <code>(lisp-implementation-version)</code>?</li>
- <li>What is the value of <code>*features*</code>?
-   Try <code>"clisp --version"</code>.</li>
- <li>Please supply the full output (copy and paste)
-   of all the error messages.</li>
-</ol>
+<p>For more information, please see:</p>
+<ul>
+ <li><a href="http://www.camera.org/">Committee for Accuracy in Middle
+  East Reporting in America</a></li>
+ <li><a href="http://www.iris.org.il/">Information Regarding Israel's
+  Security</a></li>
+ <li><a href="http://www.memri.org/">Middle East Media Research
+  Institute</a></li>
+ <li><a href="http://www.mideasttruth.com/">YES to peace, NO to
+  terror</a></li>
+ <li><a href="http://www.palestine-central.com/links.html">More
+  links</a></li>
+</ul>
 
 <p><a href="#index">index</a></p>
 
