--- a/clisp.html
+++ b/clisp.html
@@ -54,6 +54,7 @@
   [ <a href="#opt-quiet"><code>-q</code></a> |
     <a href="#opt-quiet"><code>--quiet</code></a> |
     <a href="#opt-quiet"><code>--silent</code></a> ]
+  [ <a href="#opt-interactive-debug"><code>-interactive-debug</code></a> ]
   [ <a href="#opt-w"><code>-w</code></a> ]
   [ <a href="#opt-ilisp"><code>-I</code></a> ]
   [ <a href="#opt-ansi"><code>-ansi</code></a> ]
@@ -73,7 +74,7 @@
 <h2 id="Description">Description</h2>
 
 <p>Invokes the Common Lisp interpreter and compiler.
-Invoked without arguments, executes a read-eval-print loop, in which
+Invoked without arguments, executes the read-eval-print loop, in which
 expressions are in turn read from standard input, evaluated by the lisp
 interpreter, and their results output to standard output.
 Invoked with <a href="#opt-compile"><code>-c</code></a>, compiles
@@ -89,7 +90,7 @@ more efficiently.</p>
 
 <dt id="opt-version"><strong><code>--version</code></strong></dt>
 <dd>Displays the <code>clisp</code> version number, as given by the
- function call <code>(<a href="CLHSROOT/Body/fun_lisp-impl_tion-version.html">lisp-implementation-version</a>)</code>.<p/></dd>
+ function call <code>(<a href="http://www.lisp.org/Body/fun_lisp-impl_tion-version.html">lisp-implementation-version</a>)</code>.<p/></dd>
 
 <dt id="opt-license"><strong><code>--license</code></strong></dt>
 <dd>Displays a summary of the licensing information, the
@@ -101,6 +102,8 @@ more efficiently.</p>
  This is the directory containing the linking sets and other data files.
 This option is normally not necessary, because the installation directory
 is already built-in in the <code>clisp</code> executable.
+Directory <var>lisplibdir</var> can be changed dynamically using the
+symbol-macro <code>*lib-directory*</code>.
 <p/></dd>
 
 <dt id="opt-link-set"><strong><code>-K</code>
@@ -146,17 +149,22 @@ It is therefore common to specify 10 MB even if only 2 MB are going to be used.
 uses to communicate with the user.
 This may be
 <code>english</code>, <code>deutsch</code>, <code>francais</code>,
-<code>espanol</code>.
+<code>espanol</code>, <code>dutch</code>.
 Other languages may be specified through the environment variable
 <code>LANG</code>,
 provided the corresponding message catalog is installed.
+The language may be changed dynamically using the symbol macro
+<a href="impnotes.html#language"><code>*current-language*</code></a>,
 <p/></dd>
 
 <dt id="opt-locale"><strong><code>-N</code>
     <var>localedir</var></strong></dt>
 <dd>Specifies the base directory of locale files. <code>clisp</code>
 will search its message catalogs in
-<var>localedir</var><code>/</code><var>language</var><code>/LC_MESSAGES/clisp.mo</code>.<p/></dd>
+<var>localedir</var><code>/</code><var>language</var><code>/LC_MESSAGES/clisp.mo</code>.
+This directory may be changed dynamically using the symbol macro
+<a href="impnotes.html#language"><code>*current-language*</code></a>,
+<p/></dd>
 
 <dt id="opt-enc"><strong><code>-E</code><var>domain</var>
     <var>encoding</var></strong></dt>
@@ -167,13 +175,22 @@ which depends on the environment variables <code>LC_ALL</code>,
   <dd>affecting <a href="impnotes.html#def-file-enc"
      ><code>*default-file-encoding*</code></a>, or</dd>
  <dt><code>pathname</code>,</dt>
-  <dd>affecting <code>*pathname-encoding*</code>, or</dd>
+  <dd>affecting <a href="impnotes.html#path-enc"
+     ><code>*pathname-encoding*</code></a>, or</dd>
  <dt><code>terminal</code>,</dt>
-  <dd>affecting <code>*terminal-encoding*</code>, or</dd>
+  <dd>affecting <a href="impnotes.html#term-enc"
+     ><code>*terminal-encoding*</code></a>, or</dd>
  <dt><code>foreign</code>,</dt>
-  <dd>affecting <code>*foreign-encoding*</code>, or</dd>
+  <dd>affecting <a href="impnotes.html#foreign-enc"
+     ><code>*foreign-encoding*</code></a>, or</dd>
  <dt><code>misc</code>,</dt>
-  <dd>affecting <code>*misc-encoding*</code>.</dd></dl><p/></dd>
+  <dd>affecting <a href="impnotes.html#misc-enc"
+     ><code>*misc-encoding*</code></a>.</dd>
+  <dt><var>blank</var>,</dt>
+   <dd>affecting all of the above.</dd></dl>
+ Note that these values cannot be saved in a memory image.
+ You have to use the <a href="#opt-norc">init file</a>
+ to set them on startup.<p/></dd>
 
 <dt id="opt-quiet"><strong><code>-q</code></strong>,
     <strong><code>--quiet</code></strong>,
@@ -181,12 +198,21 @@ which depends on the environment variables <code>LC_ALL</code>,
 <dd>Quiet: <code>clisp</code> displays no banner at startup and no
  good-bye message when quitting.<p/></dd>
 
+<dt id="opt-interactive-debug"><code>-interactive-debug</code></dt>
+<dd>Override the batch mode imposed by
+  <a href="#opt-compile"><code>-c</code></a>,
+  <a href="#opt-exec-expr"><code>-x</code></a>, and
+  <a href="#opt-exec-file"><var>lispfile</var></a>
+and allow interactive handling of <code>ASSERT</code> and friends.</dd>
+
 <dt id="opt-wait"><strong><code>-w</code></strong></dt>
 <dd>Wait for a keypress after program termination.<p/></dd>
 
 <dt id="opt-ilisp"><strong><code>-I</code></strong></dt>
-<dd>Be ILISP friendly.
- ILISP is an alternative Emacs interface to Common Lisp systems.
+<dd>Be <a href="http://ilisp.cons.org/">ILISP</a> friendly.
+ ILISP is an alternative
+ <a href="http://www.gnu.org/software/emacs/">Emacs</a>
+ interface to Common Lisp systems.
  With this option, <code>clisp</code>
  interacts in a way that ILISP can deal with.
  Currently the only effect of this is that unnecessary prompts are not
@@ -197,13 +223,12 @@ which depends on the environment variables <code>LC_ALL</code>,
 
 <dt id="opt-ansi"><strong><code>-ansi</code></strong></dt>
 <dd>ANSI CL compliant: comply with the ANSI CL specification
-even where CLISP has been traditionally different.
+even where <code>clisp</code> has been traditionally different.
 It sets the symbol macro <code>*ansi*</code> to <code>t</code>.
 See <a href="impnotes.html#ansi">"Maximum ANSI CL compliance"</a>,
 for details.<p/></dd>
 
-<dt><a name="opt-traditional"
-    ><strong><code>-traditional</code></strong></a></dt>
+<dt id="opt-traditional"><strong><code>-traditional</code></strong></dt>
 <dd>Traditional: reverses the residual effects of
     <a href="#opt-ansi"><code>-ansi</code></a>
     in the saved image.<p/></dd>
@@ -273,8 +298,12 @@ Before <var>lispfile</var> is loaded, the variable <code>*args*</code>
 will be bound to a list of strings, representing the <var>argument</var>s.
 The first line of <var>lispfile</var> may start with <code>#!</code>,
 thus permitting <code>clisp</code> to be used as a script interpreter.
-If <var>lispfile</var> is <code>-</code>, the standard input is used instead of
-a file.
+If <var>lispfile</var> is <code>-</code>,
+the standard input is used instead of a file.
+If <var>lispfile</var> is an empty string <code>""</code>,
+the rest of the arguments is still available in <code>*args*</code>,
+for parsing by the <code><a href="impnotes.html#image">init-function</a></code>
+of the current image.
 This option must be the last one.
 No <a href="#opt-norc">RC file</a> will be executed.<p/></dd>
 
@@ -290,9 +319,9 @@ No <a href="#opt-norc">RC file</a> will be executed.<p/></dd>
 </blockquote>
 
 <p>available online as the</p>
-<blockquote title="CLHS" cite="http://www.lisp.org/HyperSpec/">
+<blockquote title="CLHS" cite="http://www.lisp.org/HyperSpec/FontMatter/">
  <p>Common Lisp HyperSpec
-    (<a href="http://www.lisp.org/HyperSpec/">"CLHS"</a> for short)</p>
+ (<a href="http://www.lisp.org/HyperSpec/FontMatter/">"CLHS"</a> for short)</p>
 </blockquote>
 
 <p>which supersedes the earlier specifications</p>
@@ -412,13 +441,45 @@ EOF (Ctrl-D)
 <h2 id="see-also">See also</h2>
 
 <p><a href="impnotes.html">impnotes.html</a>,
-<code>cmucl</code>(1),
-<code>emacs</code>(1),
-<code>xemacs</code>(1).</p>
+<a href="http://www.cons.org/cmucl/"><code>cmucl</code></a>(1),
+<a href="http://www.gnu.org/software/emacs/"><code>emacs</code></a>(1),
+<a href="http://www.xemacs.org"><code>xemacs</code></a>(1).</p>
 
+<h2 id="bugs">Bugs</h2>
 
-<h2 id="Bugs">Bugs</h2>
+<p>When you encounter a bug in <code>clisp</code>, please report it to the
+  <a href="http://lists.sourceforge.net/lists/listinfo/clisp-list">CLISP
+  mailing list</a> or the
+  <a href="http://sourceforge.net/tracker/?func=add&amp;group_id=1355&amp;atid=101355">SourceForge bug tracker</a>.</p>
 
+<p>When submitting a bug report, please specify the
+following information:</p>
+
+<ol>
+ <li>What is your platform?
+  (<code>"uname -a"</code> on a Unix system)
+  compiler version?  libc (on Linux)?</li>
+ <li>Where did you get the sources?  When?
+  (Absolute dates are preferred over the relative ones)</li>
+ <li>How did you build <code>clisp</code>? (What command, options etc.)
+  Please do a clean build (remove your build directory and build
+  <code>clisp</code> with <code>"./configure --build build"</code> or at
+  least do a <code>"make distclean"</code> before <code>"make"</code>).
+  If you are reporting a crash (segmentation fault, bus error, core
+  dump etc), please do
+  <code>"./configure --with-debug --build build-g"</code>
+   and report the backtrace.</li>
+ <li>If you are using pre-built binaries, the problem is likely
+  to be in the incompatibilities between the platform on which
+  the binary was built and yours;
+  please try compiling the sources.</li>
+ <li>What is the output of
+  <a href="#opt-version"><code>"clisp --version"</code></a>?</li>
+ <li>Please supply the full output (copy and paste) of all the error
+  messages, as well as detailed instructions on how to reproduce them.</li>
+</ol>
+
+<p>Known bugs, some of which are platform-dependent, include</p>
 <ul>
 <li>Not all extensions from ANSI CL are supported.</li>
 <li>No on-line documentation beyond <code>apropos</code>
@@ -428,7 +489,7 @@ EOF (Ctrl-D)
 <h2 id="projects">Projects</h2>
 
 <ul>
-<li>Writing on-line documentation.</li>
+<li>Write on-line documentation.</li>
 <li>Enhance the compiler so that it can inline local functions.</li>
 <li>Specify a portable set of window and graphics operations.</li>
 <li>Add Multi-Threading capabilities, via OS threads.</li>
@@ -438,16 +499,30 @@ EOF (Ctrl-D)
 
 <p>Bruno Haible and Michael Stoll.</p>
 
+<p>See <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/COPYRIGHT?rev=HEAD&amp;content-type=text/plain">COPYRIGHT</a>
+for the list of other contributors.</p>
+
+
 <hr/>
 
 <address>CLISP manual page<br/>
 Bruno Haible &lt;clisp-list@lists.sourceforge.net&gt;
 </address>
 
-<p>Last modified: 31 May 2001.</p>
+<hr/>
 
-<p><a href="http://validator.w3.org/check/referer"><img
-   src="http://www.w3.org/Icons/valid-xhtml10"
-   alt="Valid XHTML" height="31" width="88"/></a></p>
+<table width="100%"><tr><td align="left">
+ <a href="http://clisp.cons.org"><img src="clisp.png" width="48"
+    height="48" alt="[CLISP home]"/></a></td>
+ <td align="right"><a href="http://validator.w3.org/check/referer"><img
+     src="http://www.w3.org/Icons/valid-xhtml10"
+     alt="Valid XHTML" height="31" width="88"/></a>
+ <a href="http://www.w3.org/Style/CSS/Buttons/"><img
+    src="http://www.w3.org/Style/CSS/Buttons/mwcts"
+    alt="Use CSS" height="31" width="88"/></a>
+ <a href="http://jigsaw.w3.org/css-validator/check/referer"><img
+    src="http://jigsaw.w3.org/css-validator/images/vcss"
+    alt="Valid CSS" height="31" width="88"/></a></td>
+</tr></table>
 </body>
 </html>
