--- a/faq.html
+++ b/faq.html
@@ -19,14 +19,25 @@
 <h1>CLISP FAQ list</h1>
 
 <p>This is a list of frequently asked questions about
-  <a href="http://clisp.cons.org">CLISP</a>.</p>
+<a href="http://clisp.cons.org">CLISP</a> on the
+<a href="http://sourceforge.net/mail/?group_id=1355">CLISP mailing lists</a>
+and the USENET newsgroup
+<a href="http://groups.google.com/groups?as_ugroup=comp.lang.lisp"
+   >comp.lang.lisp</a>.
+<em>All</em> the legitimate technical question are addressed in the
+CLISP documentation (<a href="impnotes/">implementation notes</a>,
+<a href="clisp.html">man page</a>, etc), and for such questions this
+list provides a link into the docs.
+The frequently asked political questions are answered here in
+<strong>full</strong> detail (meaning that no forther discussion
+of the issues will be entertained).</p>
 
-<p>Please <a href="mailto:clisp-list@lists.sf.net">submit</a>
-  more questions (and answers!)</p>
+<p>Please <a href="mailto:clisp-list@lists.sf.net?subject=FAQ">submit</a>
+more questions (and answers!)</p>
 
 <p>This document is distributed by the GNU CLISP project under the
-  <a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation
-  License</a>.</p>
+<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation
+License</a>.</p>
 
 <h2 id="index">Index</h2>
 
@@ -36,14 +47,15 @@
 
 <h2 id="meta">Meta information</h2>
 
-<h3 id="gpl">License</h3>
+<h3 id="gpl">License - why
+  <a href="http://www.gnu.org/copyleft/gpl.html">GPL</a>?</h3>
 
-<p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/clisp/clisp/doc/Why-CLISP-is-under-GPL?rev=HEAD&amp;content-type=text/vnd.viewcvs-markup">Why CLISP is under GPL</a>?</p>
+<p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/clisp/clisp/doc/Why-CLISP-is-under-GPL?rev=HEAD&amp;content-type=text/vnd.viewcvs-markup">Because CLISP uses GNU readline</a>.</p>
 
 <h3 id="menorah">Why is CLISP using menorah as the logo?</h3>
 
 <p>If you must have some answer and you do not care whether it is
-correct or not, you may think that
+correct or not, you may simply think that
 <a href="http://www.lisp.org">Common Lisp</a> brings
 the <strong>Light</strong> to a programmer, and
 <a href="http://clisp.cons.org">CLISP</a>  is a vehicle that carries
@@ -52,7 +64,7 @@ the <strong>Light</strong>.</p>
 <h4>History</h4>
 
 <p>CLISP has been using the menorah for the logo since the project was
-first started in the early 1990-ies by Bruno Haible and Michael Stoll.
+first started in the late 1980-ies by Bruno Haible and Michael Stoll.
 This <em>probably</em> reflects the authors' affection toward the
 Jewish people, Judaism or the State of Israel
 (neither of the two original authors is Jewish by birth).
@@ -64,7 +76,7 @@ Both of them are very busy though, so do not expect a prompt reply.</p>
 
 <p>The CLISP developers, both the original creators and the current
 maintainers, do not subscribe to the mainstream view that blames the
-Jews for everything from high oil prices and Islamic radicalism to El
+Jews for everything from high oil prices and Islamic extremism to El
 Ni&ntilde;o and Sun spots.</p>
 
 <p>For more information, please see:</p>
@@ -80,6 +92,18 @@ Ni&ntilde;o and Sun spots.</p>
  <li><a href="http://www.palestine-central.com/links.html">More
   links</a></li>
 </ul>
+
+<h4>Aren't there other political issues of concern?</h4>
+
+<p>Yes, there are!  For example, in 1989 the communist government of the
+People's Republic of China murdered some 3000+ student human rights
+protesters at the Tienanmen square in Beijing, and people appear to have
+already forgotten this crime.
+A note to that effect was kept in the file
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/clisp/clisp/src/timezone.lisp">timezone.lisp</a>
+until 2002, when we decided that is was not visible enough there and
+moved it here.</p>
+
 
 <p><a href="#index">index</a></p>
 
