--- a/resources.html
+++ b/resources.html
@@ -141,8 +141,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>Punimax</strong>, a rather antiquated computer algebra system</dt>
   <dd><a href="ftp://tsx-11.mit.edu/pub/linux/packages/lisp/"
               >ftp://tsx-11.mit.edu/pub/linux/packages/lisp/</a><br/>
-  <a href="http://www.can.nl/SystemsOverview/General/PUNIMAX.html"
-          >http://www.can.nl/SystemsOverview/General/PUNIMAX.html</a></dd>
+  <a href="http://www.riaca.win.tue.nl/archive/can/Systems_and_Packages/Per_Purpose/General/PUNIMAX.html">http://www.riaca.win.tue.nl/archive/can/Systems_and_Packages/Per_Purpose/General/PUNIMAX.html</a></dd>
  <dt><strong>New Millenium Space Flight Mission</strong>
      [<a href="gat@jpl.nasa.gov">Erann Gat</a>]</dt>
   <dd>(They chose Harlequin CL for the space flight, with CLISP as
