added "How do I report bugs" and "How do I ask for help"

--- a/faq.html
+++ b/faq.html
@@ -29,8 +29,8 @@ CLISP documentation (<a href="impnotes/">implementation notes</a>,
 <a href="clisp.html">man page</a>, etc), and for such questions this
 list provides a link into the docs.
 The frequently asked political questions are answered here in
-<strong>full</strong> detail (meaning that no forther discussion
-of the issues will be entertained).</p>
+<strong>full</strong> detail (meaning that no further explanations
+of the issues will be provided).</p>
 
 <p>Please <a href="mailto:clisp-list@lists.sf.net?subject=FAQ">submit</a>
 more questions (and answers!)</p>
@@ -44,13 +44,24 @@ License</a>.</p>
 <ol>
  <li><a href="#meta">meta information</a></li>
 </ol>
+<hr/>
 
 <h2 id="meta">Meta information</h2>
 
-<h3 id="gpl">License - why
+<ol>
+ <li><a href="#gpl">License - why GNU GPL?</a></li>
+ <li><a href="#menorah">Why is CLISP using menorah as the logo?</a></li>
+ <li><a href="#help">How do I ask for help?</a></li>
+ <li><a href="#bugs">How do I report bugs?</a></li>
+</ol>
+<hr/>
+
+<h3 id="gpl">License - why <a href="http://www.gnu.org">GNU</a>
   <a href="http://www.gnu.org/copyleft/gpl.html">GPL</a>?</h3>
 
 <p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/clisp/clisp/doc/Why-CLISP-is-under-GPL?rev=HEAD&amp;content-type=text/vnd.viewcvs-markup">Because CLISP uses GNU readline</a>.</p>
+
+<p><a href="#meta">back to Meta</a></p><hr/>
 
 <h3 id="menorah">Why is CLISP using menorah as the logo?</h3>
 
@@ -104,6 +115,43 @@ A note to that effect was kept in the file
 until 2002, when we decided that is was not visible enough there and
 moved it here.</p>
 
+<p><a href="#meta">back to Meta</a></p><hr/>
+
+<h3 id="help">How do I ask for help?</h3>
+
+<p>If you have a question about CLISP, you have the following options
+ (listed in the order of decreasing audience size):</p>
+
+<dl>
+ <dt><strong>USENET group <a href="http://groups.google.com/groups?as_ugroup=comp.lang.lisp">comp.lang.lisp</a></strong></dt>
+  <dd>This is the right place to ask all general Lisp questions, such
+   as "how do I find a character in a string?"</dd>
+ <dt><strong>CLISP User Mailing List
+  <a href="mailto:clisp-list@lists.sf.net">clisp-list</a></strong></dt>
+  <dd>This is the right place to ask user-level CLISP-specific questions,
+   such as <a href="impnotes.html#image">"how do I save my CLISP
+   image?"</a></dd>
+ <dt><strong>CLISP Developer Mailing List
+  <a href="mailto:clisp-devel@lists.sf.net">clisp-devel</a></strong></dt>
+  <dd>This is the right place to discuss CLISP internals, submit
+   patches, offer help.</dd>
+ <dt><strong>Individual CLISP developers</strong></dt>
+  <dd>This is <strong>never</strong> the right thing to do, unless you
+   want to <strong>hire</strong> this developer to do some CLISP
+   consulting (the only exception to this rule are people who have
+   already contributed to CLISP in the past, or published general Lisp
+   books or are important for some other reason :-).
+   This is actually for your own benefit: the CLISP developers are so
+   busy, they might get weeks to answer your question.</dd>
+</dl>
+
+<p><a href="#meta">back to Meta</a></p><hr/>
+
+<h3 id="bugs">How do I report bugs?</h3>
+
+<p><a href="clisp.html#bugs">Read The Fine Manual</a>!</p>
+
+<p><a href="#meta">back to Meta</a></p><hr/>
 
 <p><a href="#index">index</a></p>
 
