link garnet to http://garnetlisp.sf.net/

--- a/resources.html
+++ b/resources.html
@@ -111,11 +111,12 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
            >ftp://clisp.cons.org/pub/lisp/clisp/contrib/</a></dd>
  <dt><strong>SLIK</strong> GUI toolkit [Ira Kalet]</dt>
   <dd><a href="ftp://ftp.radonc.washington.edu/dist/slik/"
-              >ftp://ftp.radonc.washington.edu:/dist/slik/</a><br/>
+              >ftp://ftp.radonc.washington.edu/dist/slik/</a><br/>
    <a href="http://www.radonc.washington.edu/medinfo/prism/"
            >http://www.radonc.washington.edu/medinfo/prism/</a></dd>
- <dt><strong>Garnet 3.0</strong> [Brad A. Myers, Andrew Mickish et al]</dt>
+ <dt><strong>Garnet</strong> [Brad A. Myers, Andrew Mickish et al]</dt>
   <dd><a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html</a><br/>
+   <a href="http://garnetlisp.sf.net/">http://garnetlisp.sf.net/</a>
    <a href="ftp://ftp.csl.sri.com/pub/users/gilham"
            >ftp://ftp.csl.sri.com/pub/users/gilham</a></dd>
  <dt><strong>with-wish</strong> [Matthias Lindner]</dt>
