--- a/resources.html
+++ b/resources.html
@@ -13,34 +13,23 @@
 
 <body>
 
-<h1>FTP resources</h1>
-
-<p>CLISP is available via anonymous ftp from</p>
- <ul><li><a href="ftp://cvs2.cons.org/pub/lisp/clisp/"
-                 >ftp://cvs2.cons.org/pub/lisp/clisp/</a> and</li>
- <li><a href="ftp://ftp.gnu.org/pub/gnu/clisp/"
-             >ftp://ftp.gnu.org/pub/gnu/clisp/</a>.</li></ul>
-
-<h1>WWW resources</h1>
-
-<h2>About CLISP</h2>
+<h1>About CLISP</h1>
 
 <dl>
- <dt><strong>Home</strong> [Sam Steingold]</dt>
-  <dd><a href="http://clisp.cons.org/"
-              >http://clisp.cons.org/</a></dd>
- <dt><strong>Old homepage</strong> [Bruno Haible]</dt>
-  <dd><a href="http://clisp.cons.org/~haible/clisp.html"
-              >http://clisp.cons.org/~haible/clisp.html</a></dd>
- <dt><strong>Source</strong> [Bruno Haible]</dt>
-  <dd><a href="ftp://clisp.cons.org/pub/lisp/clisp/source/"
-              >ftp://clisp.cons.org/pub/lisp/clisp/source/</a></dd>
- <dt><strong>Binaries for various Unix, DOS, OS/2, Windows, Amiga, Acorn
-     platforms</strong> [Bruno Haible]</dt>
-  <dd><a href="ftp://clisp.cons.org/pub/lisp/clisp/binaries/"
-              >ftp://clisp.cons.org/pub/lisp/clisp/binaries/</a></dd>
- <dt><strong>Binaries for i386-linux</strong></dt>
-  <dd><a href="ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/"
+ <dt><strong>Home</strong></dt>
+  <dd><a href="http://clisp.cons.org/">http://clisp.cons.org/</a><br/>
+      <a href="http://www.clisp.org/">http://www.clisp.org/</a><br/>
+      <a href="http://clisp.sourceforge.net/"
+              >http://clisp.sourceforge.net/</a><br/>
+      <a href="http://www.gnu.org/software/clisp/"
+              >http://www.gnu.org/software/clisp/</a></dd>
+ <dt><strong>Sources and binaries for various Unix, DOS, OS/2, Windows,
+     Amiga, Acorn platforms</strong></dt>
+  <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/"
+              >ftp://cvs2.cons.org/pub/lisp/clisp/</a><br/>
+      <a href="ftp://ftp.gnu.org/pub/gnu/clisp/"
+              >ftp://ftp.gnu.org/pub/gnu/clisp/</a><br/>
+      <a href="ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/"
               >ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/</a></dd>
  <dt><strong>Debian packages</strong>
      [<a href="mailto:will@misconception.org.uk">Will Newton</a>]</dt>
@@ -50,9 +39,15 @@
   <dd>Here is a <a href="fibjap.lsp">source file</a> with Japanese
    characters in it.  Edited <a href="fibjap-emacs.png">in GNU
    Emacs</a>, then run <a href="fibjap-xterm.png">in xterm</a>.</dd>
+ <dt><strong>IDE</strong></dt>
+  <dd><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a> works
+   just fine with CLISP using the standard "inferior lisp" functionality
+   (i.e., CLISP running as an Emacs sub-process).
+   Some people prefer <a href="http://ilisp.cons.org/">ILISP</a> to the
+   standard Emacs facilities.</dd>
 </dl>
 
-<h2>Documentation about Common Lisp</h2>
+<h1>Documentation about Common Lisp</h1>
 
 <dl>
  <dt><strong>ANSI CL spec in HTML</strong> [Kent Pitman at Harlequin Ltd.]</dt>
@@ -65,7 +60,7 @@
   <a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/ai-repository/ai/html/cltl/cltl2.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/ai-repository/ai/html/cltl/cltl2.html</a></dd>
 </dl>
 
-<h2>About Lisp in general</h2>
+<h1>About Lisp in general</h1>
 
 <p><a href="http://www.podval.org/~sds/tool.html">The right tool for
 the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
@@ -101,14 +96,18 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
       >Kent M. Pitman's Second Wind</a>
  [<a href="http://slashdot.org/">Slashdot</a>]</p>
 
-<h2>Packages running in CLISP</h2>
+<h1>Packages running in CLISP</h1>
 
 <dl>
- <dt><strong>Various packages</strong> [Bruno Haible]</dt>
-  <dd><a href="ftp://clisp.cons.org/pub/lisp/clisp/packages/"
-              >ftp://clisp.cons.org/pub/lisp/clisp/packages/</a><br/>
-   <a href="ftp://clisp.cons.org/pub/lisp/clisp/contrib/"
-           >ftp://clisp.cons.org/pub/lisp/clisp/contrib/</a></dd>
+ <dt><strong>Various packages</strong></dt>
+  <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/packages/"
+              >ftp://cvs2.cons.org/pub/lisp/clisp/packages/</a><br/>
+   <a href="ftp://cvs2.cons.org/pub/lisp/clisp/contrib/"
+           >ftp://cvs2.cons.org/pub/lisp/clisp/contrib/</a><br/>
+   <a href="ftp://ftp.gnu.org/pub/gnu/clisp/packages/"
+              >ftp://ftp.gnu.org/pub/gnu/clisp/packages/</a><br/>
+   <a href="ftp://ftp.gnu.org/pub/gnu/clisp/contrib/"
+              >ftp://ftp.gnu.org/pub/gnu/clisp/contrib/</a></dd>
  <dt><strong>SLIK</strong> GUI toolkit [Ira Kalet]</dt>
   <dd><a href="ftp://ftp.radonc.washington.edu/dist/slik/"
               >ftp://ftp.radonc.washington.edu/dist/slik/</a><br/>
@@ -116,7 +115,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
            >http://www.radonc.washington.edu/medinfo/prism/</a></dd>
  <dt><strong>Garnet</strong> [Brad A. Myers, Andrew Mickish et al]</dt>
   <dd><a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html</a><br/>
-   <a href="http://garnetlisp.sf.net/">http://garnetlisp.sf.net/</a>
+   <a href="http://garnetlisp.sf.net/">http://garnetlisp.sf.net/</a><br/>
    <a href="ftp://ftp.csl.sri.com/pub/users/gilham"
            >ftp://ftp.csl.sri.com/pub/users/gilham</a></dd>
  <dt><strong>with-wish</strong> [Matthias Lindner]</dt>
