fixed with-wish link

--- a/resources.html
+++ b/resources.html
@@ -100,14 +100,17 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
 
 <dl>
  <dt><strong>Various packages</strong></dt>
-  <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/packages/"
-              >ftp://cvs2.cons.org/pub/lisp/clisp/packages/</a><br/>
-   <a href="ftp://cvs2.cons.org/pub/lisp/clisp/contrib/"
-           >ftp://cvs2.cons.org/pub/lisp/clisp/contrib/</a><br/>
-   <a href="ftp://ftp.gnu.org/pub/gnu/clisp/packages/"
-              >ftp://ftp.gnu.org/pub/gnu/clisp/packages/</a><br/>
-   <a href="ftp://ftp.gnu.org/pub/gnu/clisp/contrib/"
-              >ftp://ftp.gnu.org/pub/gnu/clisp/contrib/</a></dd>
+  <dd><dl>
+   <dt id="packages"><strong>packages</strong></dt>
+    <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/packages/"
+                >ftp://cvs2.cons.org/pub/lisp/clisp/packages/</a><br/>
+        <a href="ftp://ftp.gnu.org/pub/gnu/clisp/packages/"
+                >ftp://ftp.gnu.org/pub/gnu/clisp/packages/</a></dd>
+   <dt id="contrib"><strong>contrib</strong></dt>
+    <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/contrib/"
+                >ftp://cvs2.cons.org/pub/lisp/clisp/contrib/</a><br/>
+        <a href="ftp://ftp.gnu.org/pub/gnu/clisp/contrib/"
+                >ftp://ftp.gnu.org/pub/gnu/clisp/contrib/</a></dd></dl></dd>
  <dt><strong>SLIK</strong> GUI toolkit [Ira Kalet]</dt>
   <dd><a href="ftp://ftp.radonc.washington.edu/dist/slik/"
               >ftp://ftp.radonc.washington.edu/dist/slik/</a><br/>
@@ -117,10 +120,12 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   <dd><a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html</a><br/>
    <a href="http://garnetlisp.sf.net/">http://garnetlisp.sf.net/</a><br/>
    <a href="ftp://ftp.csl.sri.com/pub/users/gilham"
-           >ftp://ftp.csl.sri.com/pub/users/gilham</a></dd>
+           >ftp://ftp.csl.sri.com/pub/users/gilham</a><br/>
+   see also <a href="#packages">packages</a> above</dd>
  <dt><strong>with-wish</strong> [Matthias Lindner]</dt>
-  <dd><a href="ftp://aida.intellektik.informatik.tu-darmstadt.de/pub/plopp/"
-    >ftp://aida.intellektik.informatik.tu-darmstadt.de/pub/plopp/</a></dd>
+  <dd>Original: <a href="ftp://ftp.cis.upenn.edu/pub/kaye/with-wish.tar.Z"
+      >ftp://ftp.cis.upenn.edu/pub/kaye/with-wish.tar.Z</a><br/>
+    see also <a href="#contrib">contrib</a> above.</dd>
  <dt><strong>CL GTK bindings</strong> [Gilbert Baumann]</dt>
   <dd><a href="http://www.uni-karlsruhe.de/~unk6/"
               >http://www.uni-karlsruhe.de/~unk6/</a></dd>
