fixed Bruno's homepage

--- a/summary.html
+++ b/summary.html
@@ -21,7 +21,7 @@ language.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> is a Common Lisp
 implementation by
-<a href="http://clisp.cons.org/~haible/">Bruno Haible</a>
+<a href="http://www.haible.de/bruno/">Bruno Haible</a>
 of Karlsruhe University and
 <a href="http://www.math.uni-duesseldorf.de/home/stoll">Michael Stoll</a>
 of Munich University, both in Germany.
