--- a/propaganda.html
+++ b/propaganda.html
@@ -81,7 +81,7 @@ The worst performance CLISP exhibits is in the area of floating point
 arithmetics.
 While showing nothing spectacularly bad and easily outperforming Java,
 Perl, TCL and any Scheme interpreter, CLISP is slower than another
-open-source CL implementation, <a href="http://www.cons.org/cmucl">CMU
+open-source CL implementation, <a href="http://www.cons.org/cmucl/">CMU
 CL</a>, which outperforms C and FORTRAN.  If your code is heavily
 numeric, you might prefer CMUCL, otherwise CLISP is a wise choice.</p>
 
