fixed some links

--- a/clash.html
+++ b/clash.html
@@ -39,7 +39,7 @@ Wood</a></address>
 <p>last modified: 2001-06-01</p>
 
 <p>notes marked "NB from SDS" were added by
- <a href="http://www.podval.org/~sds">Sam Steingold</a>.</p>
+ <a href="http://www.podval.org/~sds/">Sam Steingold</a>.</p>
 
 
 <h1>Step 1: Compile CLISP</h1>
