--- a/summary.html
+++ b/summary.html
@@ -21,10 +21,10 @@ language.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> is a Common Lisp
 implementation by
-<a href="http://www.haible.de/bruno/">Bruno Haible</a>
-of Karlsruhe University and
-<a href="http://www.math.uni-duesseldorf.de/home/stoll">Michael Stoll</a>
-of Munich University, both in Germany.
+<a href="http://www.haible.de/bruno/">Bruno Haible</a>,
+then of Karlsruhe University, and
+<a href="http://www.math.uni-duesseldorf.de/~stoll/">Michael Stoll</a>,
+then of Munich University, both in Germany.
 It mostly supports the Lisp described in the
 <a href="http://www.lisp.org/HyperSpec/FrontMatter/">ANSI Common Lisp
 standard</a>.</p>
