fixed links for slik and EMA-XPS

--- a/resources.html
+++ b/resources.html
@@ -63,7 +63,7 @@
 <h1>About Lisp in general</h1>
 
 <p><a href="http://www.podval.org/~sds/tool.html">The right tool for
-the job</a> [<a href="http://www.podval.org/~sds">Sam Steingold</a>]</p>
+the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
 
 <p><a href="http://www.alu.org/">The Association of Lisp Users</a>
 [<a href="mailto:webmaster@alu.org">Matt Emerson</a>,
@@ -99,7 +99,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
 <h1>Packages running in CLISP</h1>
 
 <dl>
- <dt><strong>Various packages</strong></dt>
+ <dt><strong>Miscellaneous</strong></dt>
   <dd><dl>
    <dt id="packages"><strong>packages</strong></dt>
     <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/packages/"
@@ -112,8 +112,8 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
         <a href="ftp://ftp.gnu.org/pub/gnu/clisp/contrib/"
                 >ftp://ftp.gnu.org/pub/gnu/clisp/contrib/</a></dd></dl></dd>
  <dt><strong>SLIK</strong> GUI toolkit [Ira Kalet]</dt>
-  <dd><a href="ftp://ftp.radonc.washington.edu/dist/slik/"
-              >ftp://ftp.radonc.washington.edu/dist/slik/</a><br/>
+  <dd><a href="ftp://ftp.radonc.washington.edu/pub/slik/"
+              >ftp://ftp.radonc.washington.edu/pub/slik/</a><br/>
    <a href="http://www.radonc.washington.edu/medinfo/prism/"
            >http://www.radonc.washington.edu/medinfo/prism/</a></dd>
  <dt><strong>Garnet</strong> [Brad A. Myers, Andrew Mickish et al]</dt>
@@ -129,9 +129,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>CL GTK bindings</strong> [Gilbert Baumann]</dt>
   <dd><a href="http://www.uni-karlsruhe.de/~unk6/"
               >http://www.uni-karlsruhe.de/~unk6/</a></dd>
- <dt><strong>Hybrid graphic expert system shell</strong> [Hans Groschwitz]</dt>
-  <dd><a href="http://wmwap1.math.uni-wuppertal.de/EMA-XPS/"
-              >http://wmwap1.math.uni-wuppertal.de/EMA-XPS/</a></dd>
+ <dt><strong>Hybrid graphic expert system shell</strong>
+   [<a href="mailto:hans@math.uni-wuppertal.de">Hans Groschwitz</a>]</dt>
+  <dd><a href="http://www.iai.uni-wuppertal.de/EMA-XPS/"
+              >http://www.iai.uni-wuppertal.de/EMA-XPS/</a></dd>
  <dt><strong>Maxima</strong>, a descendant of Macsyma [Bill Schelter]</dt>
   <dd><a href="http://www.ma.utexas.edu/users/wfs/maxima.html"
               >http://www.ma.utexas.edu/users/wfs/maxima.html</a><br/>
@@ -148,7 +149,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
               >ftp://tsx-11.mit.edu/pub/linux/packages/lisp/</a><br/>
   <a href="http://www.riaca.win.tue.nl/archive/can/Systems_and_Packages/Per_Purpose/General/PUNIMAX.html">http://www.riaca.win.tue.nl/archive/can/Systems_and_Packages/Per_Purpose/General/PUNIMAX.html</a></dd>
  <dt><strong>New Millenium Space Flight Mission</strong>
-     [<a href="gat@jpl.nasa.gov">Erann Gat</a>]</dt>
+     [<a href="mailto:gat@jpl.nasa.gov">Erann Gat</a>]</dt>
   <dd>(They chose Harlequin CL for the space flight, with CLISP as
        the second best alternative.)
    <a href="http://www-aig.jpl.nasa.gov/home/gat/home.html"
@@ -157,7 +158,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
      [<a href="http://www.paulgraham.com/">Paul Graham</a>]</dt>
   <dd><a href="http://store.yahoo.com/">http://store.yahoo.com/</a></dd>
  <dt><strong>xindy, the fleXible INDexing sYstem</strong>
-     [<a href="jschrod@acm.org">Joachim Schrod</a>]</dt>
+     [<a href="mailto:jschrod@acm.org">Joachim Schrod</a>]</dt>
   <dd><a href="http://www.iti.informatik.th-darmstadt.de/xindy/"
               >http://www.iti.informatik.th-darmstadt.de/xindy/</a><br/>
       <a href="http://sourceforge.net/projects/xindy/"
