added `options' and `ide'

--- a/faq.html
+++ b/faq.html
@@ -42,7 +42,8 @@ License</a>.</p>
 <h2 id="index">Index</h2>
 
 <ol>
- <li><a href="#meta">meta information</a></li>
+ <li><a href="#meta">Meta information</a></li>
+ <li><a href="#run">Running CLISP</a></li>
 </ol>
 <hr/>
 
@@ -153,10 +154,33 @@ moved it here.</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
-<p><a href="#index">index</a></p>
+<p><a href="#index">index</a></p><hr/>
 
-
+<h2 id="run">Running CLISP</h2>
+<ol>
+ <li><a href="#ide">where is the IDE?</a></li>
+ <li><a href="#opt">what are the command line arguments?</a></li>
+</ol>
 <hr/>
+
+<h3 id="ide">where is the IDE?</h3>
+
+<p>Use <a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>,
+ maybe with <a href="http://ilisp.cons.org">ILISP</a>.</p>
+
+<p>See also <a href="http://cl-cookbook.sourceforge.net/windows.html">The
+  Common Lisp Cookbook</a></p>
+
+<p><a href="#run">back to Running</a></p><hr/>
+
+<h3 id="opt">what are the command line arguments?</h3>
+
+<p><a href="clisp.html">Read The Fine Manual</a>!</p>
+
+<p><a href="#run">back to Running</a></p><hr/>
+
+<p><a href="#index">index</a></p><hr/>
+
 <table width="100%"><tr><td align="left">
  <a href="http://clisp.cons.org"><img src="clisp.png" width="48"
     height="48" alt="[CLISP home]"/></a></td>
