specify the charset for fibjap.lisp

--- a/resources.html
+++ b/resources.html
@@ -36,9 +36,10 @@
   <dd><a href="http://packages.debian.org/unstable/interpreters/clisp.html"
         >http://packages.debian.org/unstable/interpreters/clisp.html</a></dd>
  <dt><strong>Screenshots of CLISP's Unicode capabilities</strong></dt>
-  <dd>Here is a <a href="fibjap.lisp">source file</a> with Japanese
-   characters in it.  <a href="fibjap-emacs.png">Edited in GNU
-   Emacs</a>, then <a href="fibjap-xterm.png">run in xterm</a>.</dd>
+  <dd>Here is a <a href="fibjap.lisp" charset="utf-8">source file</a>
+   with Japanese characters in it.
+   <a href="fibjap-emacs.png">Edited in GNU Emacs</a>,
+   then <a href="fibjap-xterm.png">run in xterm</a>.</dd>
  <dt><strong>IDE</strong></dt>
   <dd><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a> works
    just fine with CLISP using the standard "inferior lisp" functionality
