mention http://www.dia.uniroma3.it/~plasm/index.html

--- a/resources.html
+++ b/resources.html
@@ -150,11 +150,11 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
               >ftp://tsx-11.mit.edu/pub/linux/packages/lisp/</a><br/>
   <a href="http://www.riaca.win.tue.nl/archive/can/Systems_and_Packages/Per_Purpose/General/PUNIMAX.html">http://www.riaca.win.tue.nl/archive/can/Systems_and_Packages/Per_Purpose/General/PUNIMAX.html</a></dd>
  <dt><strong>New Millenium Space Flight Mission</strong>
-     [<a href="mailto:gat@jpl.nasa.gov">Erann Gat</a>]</dt>
+     [<a href="http://www.flownet.com/gat/">Erann Gat</a>]</dt>
   <dd>(They chose Harlequin CL for the space flight, with CLISP as
-       the second best alternative.)
-   <a href="http://www-aig.jpl.nasa.gov/home/gat/home.html"
-           >http://www-aig.jpl.nasa.gov/home/gat/home.html</a></dd>
+       the second best alternative.)<br/>
+   <a href="http://ic.arc.nasa.gov/projects/remote-agent/"
+           >http://ic.arc.nasa.gov/projects/remote-agent/</a></dd>
  <dt><strong>Yahoo! Store</strong>
      [<a href="http://www.paulgraham.com/">Paul Graham</a>]</dt>
   <dd><a href="http://store.yahoo.com/">http://store.yahoo.com/</a></dd>
@@ -164,6 +164,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
               >http://www.iti.informatik.th-darmstadt.de/xindy/</a><br/>
       <a href="http://sourceforge.net/projects/xindy/"
               >http://sourceforge.net/projects/xindy/</a></dd>
+ <dt><strong>PLaSM - a functional design language for computing with
+   geometry.</strong></dt>
+  <dd><a href="http://www.dia.uniroma3.it/~plasm/index.html"
+              >http://www.dia.uniroma3.it/~plasm/index.html</a></dd>
 </dl>
 
 <hr/>
