http://www.xanalys.com/software_tools/reference/HyperSpec/Front/index.htm

--- a/resources.html
+++ b/resources.html
@@ -53,7 +53,8 @@
 <dl>
  <dt><strong>ANSI CL spec in HTML</strong> [Kent Pitman at Harlequin Ltd.]</dt>
   <dd><a href="http://www.lisp.org/HyperSpec/FrontMatter/"
-              >http://www.lisp.org/HyperSpec/FrontMatter/</a></dd>
+              >http://www.lisp.org/HyperSpec/FrontMatter/</a><br/>
+      <a href="http://www.xanalys.com/software_tools/reference/HyperSpec/Front/index.htm">http://www.xanalys.com/software_tools/reference/HyperSpec/Front/index.htm</a></dd>
  <dt><strong>MOP (Meta-Object Protocol)</strong></dt>
   <dd><a href="http://www.lisp.org/mop/">http://www.lisp.org/mop/</a></dd>
  <dt><strong>CLtL2 in HTML</strong> [Mark Kantrowitz]</dt>
