--- a/resources.html
+++ b/resources.html
@@ -166,7 +166,8 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
       <a href="http://sourceforge.net/projects/xindy/"
               >http://sourceforge.net/projects/xindy/</a></dd>
  <dt><strong>PLaSM - a functional design language for computing with
-   geometry.</strong></dt>
+   geometry.</strong>
+  [<a href="mailto:plasmbug@dia.uniroma3.it">Alberto Paoluzzi</a>]</dt>
   <dd><a href="http://www.dia.uniroma3.it/~plasm/index.html"
               >http://www.dia.uniroma3.it/~plasm/index.html</a></dd>
 </dl>
