mention fink - http://fink.sourceforge.net/pdb/package.php/clisp

--- a/resources.html
+++ b/resources.html
@@ -17,14 +17,14 @@
 
 <dl>
  <dt><strong>Home</strong></dt>
-  <dd><a href="http://clisp.cons.org/">http://clisp.cons.org/</a><br/>
+  <dd><ul><li><a href="http://clisp.cons.org/">http://clisp.cons.org/</a></li></ul>
       <a href="http://www.clisp.org/">http://www.clisp.org/</a><br/>
       <a href="http://clisp.sourceforge.net/"
               >http://clisp.sourceforge.net/</a><br/>
       <a href="http://www.gnu.org/software/clisp/"
               >http://www.gnu.org/software/clisp/</a></dd>
  <dt><strong>Sources and binaries for various Unix, DOS, OS/2, Windows,
-     Amiga, Acorn platforms</strong></dt>
+     Amiga, Acorn, Mac platforms</strong></dt>
   <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/"
               >ftp://cvs2.cons.org/pub/lisp/clisp/</a><br/>
       <a href="ftp://ftp.gnu.org/pub/gnu/clisp/"
@@ -35,6 +35,10 @@
      [<a href="mailto:will@misconception.org.uk">Will Newton</a>]</dt>
   <dd><a href="http://packages.debian.org/unstable/interpreters/clisp.html"
         >http://packages.debian.org/unstable/interpreters/clisp.html</a></dd>
+ <dt><strong><a href="http://fink.sourceforge.net/">Fink</a> -
+   Unix software for your Mac</strong></dt>
+  <dd><a href="http://fink.sourceforge.net/pdb/package.php/clisp"
+              >http://fink.sourceforge.net/pdb/package.php/clisp</a></dd>
  <dt><strong>Screenshots of CLISP's Unicode capabilities</strong></dt>
   <dd>Here is a <a href="fibjap.lisp" charset="utf-8">source file</a>
    with Japanese characters in it.
