--- a/resources.html
+++ b/resources.html
@@ -17,7 +17,7 @@
 
 <dl>
  <dt><strong>Home</strong></dt>
-  <dd><ul><li><a href="http://clisp.cons.org/">http://clisp.cons.org/</a></li></ul>
+  <dd><a href="http://clisp.cons.org/">http://clisp.cons.org/</a><br/>
       <a href="http://www.clisp.org/">http://www.clisp.org/</a><br/>
       <a href="http://clisp.sourceforge.net/"
               >http://clisp.sourceforge.net/</a><br/>
