added aix binaries (ucla), tsx-11, ntnu.no

--- a/resources.html
+++ b/resources.html
@@ -30,7 +30,12 @@
       <a href="ftp://ftp.gnu.org/pub/gnu/clisp/"
               >ftp://ftp.gnu.org/pub/gnu/clisp/</a><br/>
       <a href="ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/"
-              >ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/</a></dd>
+              >ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/</a><br/>
+      <a href="ftp://ftp.ntnu.no/pub/languages/common_lisp/clisp/"
+              >a Norway mirror</a> (<strong>dated!</strong>)<br/>
+      <a href="ftp://tsx-11.mit.edu/pub/linux/packages/lisp/"
+              >TSX-11</a> (<strong>very dated!</strong>)<br/>
+  </dd>
  <dt><strong>Debian packages</strong>
      [<a href="mailto:will@misconception.org.uk">Will Newton</a>]</dt>
   <dd><a href="http://packages.debian.org/unstable/interpreters/clisp.html"
@@ -39,6 +44,9 @@
    Unix software for your Mac</strong></dt>
   <dd><a href="http://fink.sourceforge.net/pdb/package.php/clisp"
               >http://fink.sourceforge.net/pdb/package.php/clisp</a></dd>
+ <dt><strong>AIX binaries</strong></dt>
+  <dd><a href="http://aixpdslib.seas.ucla.edu/packages/clisp.html"
+              >http://aixpdslib.seas.ucla.edu/packages/clisp.html</a></dd>
  <dt><strong>Screenshots of CLISP's Unicode capabilities</strong></dt>
   <dd>Here is a <a href="fibjap.lisp" charset="utf-8">source file</a>
    with Japanese characters in it.
