ftp://ftp.tu-darmstadt.de/pub/programming/languages/lisp/clisp

--- a/resources.html
+++ b/resources.html
@@ -31,6 +31,8 @@
               >ftp://ftp.gnu.org/pub/gnu/clisp/</a><br/>
       <a href="ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/"
               >ftp://sunsite.unc.edu/pub/Linux/devel/lang/lisp/</a><br/>
+      <a href="ftp://ftp.tu-darmstadt.de/pub/programming/languages/lisp/clisp/"
+              >a German mirror</a><br/>
       <a href="ftp://ftp.ntnu.no/pub/languages/common_lisp/clisp/"
               >a Norway mirror</a> (<strong>dated!</strong>)<br/>
       <a href="ftp://tsx-11.mit.edu/pub/linux/packages/lisp/"
