link http://www.faqs.org/faqs/unix-faq/shell/shell-differences/

--- a/clash.html
+++ b/clash.html
@@ -16,8 +16,9 @@
 <h2>Summary</h2>
 
 <p>Thus document describes how you can make
- <a href="http://clisp.cons.org">CLISP</a> your login shell on
- <a href="http://www.gnu.org">Gnu</a>/<a
+ <a href="http://clisp.cons.org">CLISP</a> your login
+ <a href="http://www.faqs.org/faqs/unix-faq/shell/shell-differences/">shell</a>
+ on <a href="http://www.gnu.org">Gnu</a>/<a
  href="http://www.linux.org">Linux</a>.</p>
 
 <p>You can probably use these instructions on other UNIX systems
