Will Newton's address is will@debian.org

--- a/resources.html
+++ b/resources.html
@@ -39,7 +39,7 @@
               >TSX-11</a> (<strong>very dated!</strong>)<br/>
   </dd>
  <dt><strong>Debian packages</strong>
-     [<a href="mailto:will@misconception.org.uk">Will Newton</a>]</dt>
+     [<a href="mailto:will@debian.org">Will Newton</a>]</dt>
   <dd><a href="http://packages.debian.org/unstable/interpreters/clisp.html"
         >http://packages.debian.org/unstable/interpreters/clisp.html</a></dd>
  <dt><strong><a href="http://fink.sourceforge.net/">Fink</a> -
