--- a/resources.html
+++ b/resources.html
@@ -132,7 +132,8 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
               >ftp://ftp.radonc.washington.edu/pub/slik/</a><br/>
    <a href="http://www.radonc.washington.edu/medinfo/prism/"
            >http://www.radonc.washington.edu/medinfo/prism/</a></dd>
- <dt><strong>Garnet</strong> [Brad A. Myers, Andrew Mickish et al]</dt>
+ <dt><strong>Garnet</strong> GUI toolkit
+    [Brad A. Myers, Andrew Mickish et al]</dt>
   <dd><a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/garnet/www/garnet-home.html</a><br/>
    <a href="http://garnetlisp.sf.net/">http://garnetlisp.sf.net/</a><br/>
    <a href="ftp://ftp.csl.sri.com/pub/users/gilham"
@@ -155,7 +156,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
       <a href="http://www.gnu.org/software/maxima/"
               >http://www.gnu.org/software/maxima/</a></dd>
  <dt><strong>ACL2</strong> (Applicative Common Lisp)
-  - a computational logic system [starting with version 2.6]
+  - a computational logic system
   [<a href="mailto:kaufmann@cs.utexas.edu">Matt Kaufmann</a>,
    <a href="mailto:moore@cs.utexas.edu">J Strother Moore</a>]</dt>
   <dd><a href="http://www.cs.utexas.edu/users/moore/acl2/"
